--- a/app/resources/com.mazur.RcloneExplorer.desktop
+++ b/app/resources/com.mazur.RcloneExplorer.desktop
@@ -3,5 +3,5 @@ Name=Rclone Explorer
 Exec=rclone_explorer
 Terminal=false
 Type=Application
-Icon=com.mazur.rclone_explorer
+Icon=com.mazur.RcloneExplorer
 Categories=Network;
