--- a/flatpak.yaml
+++ b/flatpak.yaml
@@ -10,6 +10,7 @@ finish-args:
   - --share=network
   - --filesystem=home
   - --filesystem=/tmp
+  - --filesystem=xdg-config/kdeglobals:ro
   - --device=dri
   - --talk-name=org.freedesktop.Flatpak
 
